testData/annotation.semantic/InitMagicMethodShouldBeStatic.hx
class Test {
  <error descr="Static initializer method '__init__' must be static">public function __init__() {}</error>
}